--- a/StudentsWebApplication/index.html
+++ b/StudentsWebApplication/index.html
@@ -27,6 +27,7 @@
                         <td><button ng-click="editStudent(s)">Изменить</button></td>
                         <td><button ng-click="deleteStudent(s.Id)">Удалить</button></td>
                     </tr>
+                    <tr><td><button ng-click="newStudent()">Добавить</button></td></tr>
                 </tbody>
             </table>
 
@@ -43,9 +44,10 @@
                     <tr ng-repeat="s in courses">
                         <td><p>{{s.Title}}</p></td>
                         <td><p>{{s.Lecturer}}</p></td>
-                        <td><button>Изменить</button></td>
+                        <td><button ng-click="editCourse(s)">Изменить</button></td>
                         <td><button ng-click="deleteCourse(s.Id)">Удалить</button></td>
                     </tr>
+                    <tr><td><button ng-click="newCourse()">Добавить</button></td></tr>
                 </tbody>
             </table>
 
@@ -62,9 +64,10 @@
                     <tr ng-repeat="s in students_courses">
                         <td><p>{{s.Name}}</p></td>
                         <td><p>{{s.Title}}</p></td>
-                        <td><button>Изменить</button></td>
+                        <td><button ng-click="editStudentCourse(s)">Изменить</button></td>
                         <td><button ng-click="deleteStudentCourse(s.Id)">Удалить</button></td>
                     </tr>
+                    <tr><td><button ng-click="newStudentCourse()">Добавить</button></td></tr>
                 </tbody>
             </table>
         </form>
@@ -75,25 +78,40 @@
             Возраст:<br>
             <input type="number" ng-model="selectedStudent.Age">
             <br><br>
-            <button ng-click="updateStudent()">Сохранить</button>
+            <button ng-click="addOrUpdateStudent()">Сохранить</button>
         </form>
 
         <form id="edit_course_form" style="visibility:hidden">
-            ФИО:<br>
+            Предмет:<br>
             <input type="text" ng-model="selectedCourse.Title"><br>
-            Возраст:<br>
+            Преподаватель:<br>
             <input type="text" ng-model="selectedCourse.Lecturer">
             <br><br>
-            <button ng-click="updateCourse()">Сохранить</button>
+            <button ng-click="addOrUpdateCourse()">Сохранить</button>
         </form>
 
         <form id="edit_student_course_form" style="visibility:hidden">
-            ФИО:<br>
-            <input type="number" ng-model="selectedStudentCourse.StudentId"><br>
-            Возраст:<br>
-            <input type="number" ng-model="selectedStudentCourse.CourseId">
+            Студент:<br>
+            <select>
+                <option ng-repeat="s in students"
+                        ng-value="s.Id"
+                        ng-model="selectedStudentCourse.StudentId"
+                        ng-selected="selectedStudentCourse.StudentId == s.Id">
+                    {{s.Name}}
+                </option>
+            </select>
+            <br>
+            Предмет:<br>
+            <select>
+                <option ng-repeat="s in courses"
+                        ng-value="s.Id"
+                        ng-model="selectedStudentCourse.CourseId"
+                        ng-selected="selectedStudentCourse.CourseId == s.Id">
+                    {{s.Title}}
+                </option>
+            </select>
             <br><br>
-            <button ng-click="updateStudentCourse()">Сохранить</button>
+            <button ng-click="addOrUpdateStudentCourse()">Сохранить</button>
         </form>
 
     </div>
